<resources>
    <string name="app_name">AnTrack</string>

    <string name="menu_show_help">Show Help</string>
    <string name="menu_launch_wizard">Launch Wizard</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>

    <string name="main_enable_service">Enable service</string>
    <string name="main_start_at_boot">Start service at boot</string>
    <string name="main_hide_icon">Hide application icon</string>
    <string name="main_update_interval">Update interval in minutes</string>
    <string name="main_make_system">Removing protection</string>
    <string name="wizard_admin_button">Grant admin permissions</string>
    <string name="wizard_root_text">Remote screenshot function only works with root permission</string>
    <string name="wizard_root_button">Grant root permissions</string>
    <string name="wizard_plugin_button">Now you must choise what cloud service app will use for send data and get remote commands. Don\'t worry, app will see only its own directory in Applications folder.</string>
    <string name="wizard_close_button">Close</string>
    <string name="wizard_admin_text">Remote wipe and lock with PIN-code functions requires admin rights</string>

    <string name="warning">Warning</string>
    <string name="hide_icon_warning"><![CDATA[
If you hide icon and press \"Home\" button you can\'t return back.
You either need to remove the application or unhide icon using the command <i>hide off</i> in the file <i>control</i>.
Hide icon?
    ]]></string>

    <string name="help_title">How to use</string>
    <string name="help_text"><![CDATA[
Coming soon
    ]]></string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="wizard_welcome">Settings wizard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading_dialog">Loading...</string>
    <string name="not_connected_to_cloud">Not connected to cloud, can\'t update device list</string>
    <string name="cant_get_devices_list">Can\'t get devices list</string>
    <string name="cant_connect">Can\'t connect. Try later.</string>
    <string name="delete">Delete</string>
    <string name="trial_is_expired">Trial is Expired</string>
    <string name="cant_load_device">Can\'t load device settings</string>
    <string name="root_rights_granted">Root rights granted</string>
    <string name="delete_files_warning">Files will be deleted from this device and from the cloud</string>
    <string name="record_audio_title">Record audio</string>
    <string name="record_audio_text">How long will be record</string>
    <string name="cancel">Cancel</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="make_call_title">Dial</string>
    <string name="make_call_number">Number:</string>
    <string name="make_call_error">Fill \"number\" field</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_sms_text">Text:</string>
    <string name="device_info">Device info</string>
    <string name="current_status">Current status</string>
    <string name="trial_status">Trial Status</string>
    <string name="days_remaining">days remaining:</string>
    <string name="message_nodata">No data</string>
    <string name="message_nomodule">Module not found</string>
    <string name="message_noroot">No root rights</string>
    <string name="message_nophone">No phone function support</string>
    <string name="dropbox" translatable="false">Dropbox</string>
    <string name="start">Start</string>
    <string name="incoming">Incoming</string>
    <string name="hide_application">Hide application</string>
    <string name="hide_icon">Hide AnTrack icon</string>
    <string name="move_to_system">Move application to system partition</string>
    <string name="if_device_lost">If device lost</string>
    <string name="mark_as_lost">Mark as lost</string>
    <string name="wipe">Wipe</string>
    <string name="lock">Lock</string>
    <string name="alarm">Alarm</string>
    <string name="sms_calls">SMS / Calls</string>
    <string name="dial">Dial</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
    <string name="take_screenshot">Take screenshot</string>
    <string name="record_audio">Record audio</string>
    <string name="menu_device_info">Device info</string>
    <string name="menu_location">Location</string>
    <string name="menu_apps">Applications</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_screens">Screenshots</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_control">Control</string>
    <string name="menu_shell">Shell</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_modules">Modules</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_howto">How to use app</string>
    <string name="menu_website">Web site</string>
    <string name="send">Send</string>
    <string name="message_fill_number_and_text">Fill number and text fields</string>
    <string name="outgoing">Outgoing</string>
    <string name="answered">Answered</string>
    <string name="message_loading">Waiting for device response</string>
    <string name="wipe_warning">This action will delete all data on the device.</string>
    <string name="wipe_sd_checkbox">Wipe SD card</string>
    <string name="lock_warning">This action will lock device with given PIN-code.</string>
    <string name="overlay_help_message">Tap on it to switch to other connected devices.</string>
    <string name="wizard_nopermissions">You must grant all permissions to app</string>
    <string name="main_update_interval_more">The time interval between sending data to cloud</string>
    <string name="pref_15_minutes">15 minutes</string>
    <string name="pref_30_minutes">30 minutes</string>
    <string name="pref_1_hour">1 hour</string>
    <string name="pref_2_hours">2 hours</string>
    <string name="pref_3_hours">3 hours</string>
    <string name="main_enable_service_more">Service will respond to requests from other devices and send data to the cloud</string>
    <string name="main_start_at_boot_more">Automatic start at boot allows AnTrack stay connected to other devices</string>
    <string name="main_enable_ctl">Enable control over Dropbox</string>
    <string name="main_enable_ctl_more">Application will execute commands, written to ctl file</string>
    <string name="enable_updater">Send data to cloud</string>
    <string name="main_enable_updater">Send data to cloud</string>
    <string name="main_enable_updater_more">After disabling this device will be invisible to others</string>
    <string name="buy">Buy</string>
    <string name="battery_alert_title">Attention</string>
    <string name="battery_alert_message">To work correctly AnTrack requires that you add it to the list of energy saving mode exceptions.\n\nAfter you click Ok a \"Battery optimization\" wnindow appears on the screen. Click on the \"Not optimized\" and select \"All apps\" in the list that appears. Find AnTrack in the list, click on it, choose the option \"Don\'t optimize\" and click \"Done\". Press the back button to return to this screen.</string>
    <string name="drawer_mail">not connected</string>
    <string name="auth_request">Authentification request</string>
    <string name="allow">Allow</string>
    <string name="to_control_this_device">to control this device?</string>
</resources>
