<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="org.antrack.app.ui.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide_application"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="5dp" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide_icon"
        android:id="@+id/fragment_control_hide"
        android:checked="false"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_system"
        android:id="@+id/fragment_control_system"
        android:checked="false"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_device_lost"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="5dp" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_as_lost"
        android:id="@+id/fragment_control_lost"
        android:checked="false"
        android:textStyle="bold"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wipe"
            android:id="@+id/fragment_control_wipe"
            android:layout_weight="0.33"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lock"
            android:id="@+id/fragment_control_lock"
            android:layout_weight="0.33"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:id="@+id/fragment_control_alarm"
            android:layout_weight="0.33"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_calls"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send_sms"
            android:id="@+id/fragment_control_sms"
            android:layout_weight="0.5"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dial"
            android:id="@+id/fragment_control_call"
            android:layout_weight="0.5"
            />

    </LinearLayout>
</LinearLayout>
</ScrollView>