<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="org.antrack.app.ui.WizardActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wizard_welcome"
        android:id="@+id/textView_greetings"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_admin_text"
        android:id="@+id/textView_admin"
        android:layout_below="@+id/textView_greetings"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_admin_button"
        android:id="@+id/button_admin"
        android:layout_below="@+id/textView_admin"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_root_text"
        android:id="@+id/textView_root"
        android:layout_below="@+id/button_admin"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_root_button"
        android:id="@+id/button_root"
        android:layout_below="@+id/textView_root"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_plugin_button"
        android:id="@+id/textView_plugin"
        android:layout_below="@+id/button_root"
        android:layout_alignParentEnd="false"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dropbox auth"
        android:id="@+id/button_dropbox"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_close_button"
        android:id="@+id/button_close"
        android:elegantTextHeight="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</LinearLayout>
