<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.antrack.app.ui.MainActivity"
    android:orientation="vertical">


    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_enable_service"
        android:id="@+id/switch_enable_service"
        android:checked="true"
        android:textStyle="bold"
        android:layout_margin="10dp" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_start_at_boot"
        android:id="@+id/switch_start_at_boot"
        android:checked="true"
        android:textStyle="bold"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_update_interval"
            android:id="@+id/textView_update_interval"
            android:layout_weight="0.8"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />

        <Spinner
            android:layout_height="wrap_content"
            android:id="@+id/spinner_update_interval"
            android:spinnerMode="dialog"
            android:layout_margin="10dp"
            android:layout_weight="0.2"
            android:layout_width="wrap_content" />
    </LinearLayout>

</LinearLayout>
